# hyper-router

./: .gitignore  CNAME  Cargo.toml  README.md  changelog.md  index.html
.github/: dependabot.yml
0.0.1/doc/: search-index.js
0.0.1/hyper/: macro.header!.html
0.0.1/hyper_router/: sidebar-items.js  struct.Route.html  struct.Router.html  type.Handler.html
0.0.1/lazy_static/: macro.lazy_static!.html
0.0.1/regex/: struct.RegexSplitsN.html  struct.SubCaptures.html
0.0.1/url/: enum.SchemeType.html  index.html  struct.Url.html
0.1.1/hyper_router/: struct.Path.html  type.Handler.html
0.1.2/: search-index.js
0.1.2/aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
0.1.2/httparse/: constant.EMPTY_HEADER.html  fn.parse_chunk_size.html  fn.parse_headers.html  index.html  struct.Header.html
0.1.2/hyper/: macro.__hyper__deref!.html  macro.__hyper__tm!.html  macro.__hyper_generate_header_serialization!.html  macro.bench_header!.html  macro.header!.html  macro.test_header!.html  struct.LanguageTag.html  struct.Url.html
0.1.2/hyper_router/: index.html  sidebar-items.js  struct.Path.html  struct.Route.html  struct.RouteBuilder.html  struct.Router.html  struct.RouterBuilder.html  type.Handler.html  type.HttpResult.html
0.1.2/language_tags/: index.html  (+5 more)
0.1.3/: search-index.js
0.2.0/: search-index.js
0.3.0/: search-index.js
0.4.0/: search-index.js
benches/: matching.rs  parameter_capture.rs
doc/: search-index.js
src/: builder.rs  handlers.rs  lib.rs  main.rs  parameters.rs  path.rs  route.rs  router.rs
test-server/: main.rs
tests/: basic.rs  main.rs  parameters.rs
(+3097 files in other folders)
