[package]
name = "hyper-router"
version = "0.4.0"
authors = ["Marcin Radoszewski <moriturius@gmail.com>", "Alexander Mescheryakov <freecoder.xx@gmail.com>"]
description = "Simple routing middleware for Hyper http library."
repository = "https://github.com/marad/hyper-router"
keywords = ["hyper", "router", "routing", "middleware"]
documentation = "http://radoszewski.pl/hyper-router/0.2.0/hyper_router/"
license = "MIT"
edition = "2018"

[[bin]]
name = "test-server"
path = "test-server/main.rs"

[lib]
name = "hyper_router"
path = "src/lib.rs"

[dependencies]
futures = "^0.1"
hyper = "^0.11"
regex = "^0.2"
